Render and export emailable report of past reports
