# allure-docker-api/app.py
@@ -1123,6 +1123,7 @@ def clean_results_endpoint():
 def emailable_report_render_endpoint():
     try:
         project_id = resolve_project(request.args.get('project_id'))
+        report_param = resolve_project(request.args.get('report', 'latest'))
         if is_existent_project(project_id) is False:
             body = {
                 'meta_data': {
@@ -1136,9 +1137,9 @@ def emailable_report_render_endpoint():
         check_process(GENERATE_REPORT_PROCESS, project_id)
 
         project_path = get_project_path(project_id)
-        tcs_latest_report_project = "{}/reports/latest/data/test-cases/*.json".format(project_path)
+        tcs_report_project = "{}/reports/{}/data/test-cases/*.json".format(project_path, report_param)
 
-        files = glob.glob(tcs_latest_report_project)
+        files = glob.glob(tcs_report_project)
         files.sort(key=os.path.getmtime, reverse=True)
         test_cases = []
         for file_name in files:
@@ -1150,7 +1151,12 @@ def emailable_report_render_endpoint():
                 if test_case["hidden"] is False:
                     test_cases.append(test_case)
 
-        server_url = url_for('latest_report_endpoint', project_id=project_id, _external=True)
+        if report_param == "latest":
+            server_url = url_for('latest_report_endpoint', project_id=project_id, _external=True)
+        else:
+            project_report_path = '{}/{}'.format(report_param, REPORT_INDEX_FILE)
+            server_url = url_for('get_reports_endpoint', project_id=project_id,
+                                 path=project_report_path, _external=True)
 
         if "SERVER_URL" in os.environ:
             server_url = os.environ['SERVER_URL']
@@ -1159,7 +1165,7 @@ def emailable_report_render_endpoint():
                                  title=EMAILABLE_REPORT_TITLE, projectId=project_id,
                                  serverUrl=server_url, testCases=test_cases)
 
-        emailable_report_path = '{}/reports/{}'.format(project_path, EMAILABLE_REPORT_FILE_NAME)
+        emailable_report_path = '{}/reports/{}_{}'.format(project_path, report_param, EMAILABLE_REPORT_FILE_NAME)
         file = None
         try:
             file = open(emailable_report_path, "w")
@@ -1185,6 +1191,7 @@ def emailable_report_render_endpoint():
 def emailable_report_export_endpoint():
     try:
         project_id = resolve_project(request.args.get('project_id'))
+        report_param = resolve_project(request.args.get('report', 'latest'))
         if is_existent_project(project_id) is False:
             body = {
                 'meta_data': {
@@ -1198,7 +1205,7 @@ def emailable_report_export_endpoint():
         check_process(GENERATE_REPORT_PROCESS, project_id)
 
         project_path = get_project_path(project_id)
-        emailable_report_path = '{}/reports/{}'.format(project_path, EMAILABLE_REPORT_FILE_NAME)
+        emailable_report_path = '{}/reports/{}_{}'.format(project_path, report_param, EMAILABLE_REPORT_FILE_NAME)
 
         report = send_file(emailable_report_path, as_attachment=True)
     except Exception as ex:
